# pymojis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.fulldata.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: github_ci.yaml
src/application/: pymojis_manager.py
src/domain/entities/: emojis.py
src/domain/repositories/: repository.py
src/infrastructure/: emojis_repository.py
src/infrastructure/data/: emoji_data.json  emojis_repository.py
src/pymojis/: __init__.py
src/pymojis/application/: pymojis_manager.py
src/pymojis/domain/entities/: emojis.py
src/pymojis/domain/repositories/: repository.py
src/pymojis/infrastructure/: emojis_repository.py  exceptions.py  pymojis_repository.py  utils.py
src/pymojis/infrastructure/data_loader/: emojis_loader.py  file_loader.py
src/pymojis_fulldata/data/: full_emoji_data.json
tests/: conftest.py
tests/application/: test_emoji_manager.py
tests/domain/: test_emoji_entity.py
tests/infrastructure/: test_emoji_repository.py
tests/infrastructure/data/: mock_emojis_data.json
